--- a/gb/22/1/8/n13491098.md
+++ b/gb/22/1/8/n13491098.md
@@ -1,15 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vlavdh3748/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vlavdh3748/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vlavdh3748/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vlavdh3748/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vlavdh3748/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vlavdh3748/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>六国在关岛展开“海龙”反潜军演 剑指中共</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13491464-220105-N-NO824-1001-600x400.jpg" />
 <h6>从2022年1月5日开始，以美国为首的六国在关岛开启2022年“海龙”反潜联合演习，共同应对印太地区的传统和非传统海上安全挑战。图为关岛安德森空军基地，一架加拿大空军CP-140极光远程巡逻机降落后滑行。(Photo: Maj Leonard Kosciukiewicz, 407 Long Range Patrol Squadron)
 </h6>
 <hr>
-	<p>【大纪元2022年01月09日讯】（大纪元记者夏雨综合报导）在台海和南海局势持续紧张之际，从1月5日开始，以美国为首的六国（美加澳印日韩）在<ahref="https://github.com/vlavdh3748/djy/blob/master/gb/tag/%E5%85%B3%E5%B2%9B.md#1">关岛</a>开启2022年“海龙”反潜联合演习，共同应对印太地区的传统和非传统海上安全挑战。演习也表明关岛在应对中共威胁方面的重要战略地位。</p>
-<p>美国太平洋舰队1月6日发表新闻稿说，P-8波塞冬海上巡逻和侦察机（MPRA）与巡逻中队（VP）47和（VP）26一起前往<ahref="https://github.com/vlavdh3748/djy/blob/master/gb/tag/%E5%85%B3%E5%B2%9B.md#1">关岛</a>的安德森空军基地，与澳大利亚空军、加拿大空军、印度海军、日本海上自卫队和大韩民国海军的成员一起磨练技能。</p>
+	<p>【大纪元2022年01月09日讯】（大纪元记者夏雨综合报导）在台海和南海局势持续紧张之际，从1月5日开始，以美国为首的六国（美加澳印日韩）在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B3%E5%B2%9B.md#1">关岛</a>开启2022年“海龙”反潜联合演习，共同应对印太地区的传统和非传统海上安全挑战。演习也表明关岛在应对中共威胁方面的重要战略地位。</p>
+<p>美国太平洋舰队1月6日发表新闻稿说，P-8波塞冬海上巡逻和侦察机（MPRA）与巡逻中队（VP）47和（VP）26一起前往<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B3%E5%B2%9B.md#1">关岛</a>的安德森空军基地，与澳大利亚空军、加拿大空军、印度海军、日本海上自卫队和大韩民国海军的成员一起磨练技能。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" src="https://player.captivate.fm/episode/b446c1ba-f599-4669-988d-456c123c0142" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>此次演习正值两岸紧张局势达到历史最高水平之际，在一个重要的美国军事基地进行演习暗示美国致力于保护自己及其盟友的利益。位于西太平洋的关岛成为美军挫败来自中共潜在威胁的前哨。</p>
-<h2>六国进行反潜<ahref="https://github.com/vlavdh3748/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94.md#1">联合军演</a></h2>
+<h2>六国进行反潜<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94.md#1">联合军演</a></h2>
 <p>太平洋舰队表示，“海龙”（Sea Dragon）22主要以反潜战（ASW）训练和卓越表现为核心，在超过270小时的飞行训练中达到高潮；包括从跟踪模拟目标到最终跟踪美国海军潜艇的演习。在课堂培训课程中，来自所有国家的飞行员和飞行军官结合各自国家的能力和设备制定计划并讨论战术。</p>
 <p>“黄金剑士”VP-47 和“三叉戟”VP-26均是美军第七舰队第72司令特遣部队（CTF）的一部分，前者驻扎在华盛顿州惠德比岛海军航空站（Naval Air Station Whidbey Island），目前部署在日本青森县的三泽空军基地（Misawa Air Base in Aomori）；后者驻扎在佛罗里达州杰克逊维尔，目前部署在日本冲绳的嘉手纳空军基地（Kadena Air Base in Okinawa）。在整个部署过程中，47和26他们将在第7舰队作战区域内进行海上巡逻和侦察行动。</p>
 <p>四方集团成员日本和澳大利亚最近签署一项防务条约，以加强军事合作。最新海龙演习可能会巩固美国地区盟友之间日益增长的合作，帮助他们提高互操作性。</p>
@@ -36,41 +39,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vlavdh3748/djy/blob/master/gb/21/12/20/n13448716.md#1">美军潜艇母舰泊靠日本 推进防卫训练一体化</a></li>
-<li><a href="https://github.com/vlavdh3748/djy/blob/master/gb/21/12/29/n13467152.md#1">美国防法案邀台参加环太军演 向中共释信号</a></li>
-<li><a href="https://github.com/vlavdh3748/djy/blob/master/gb/22/1/5/n13484091.md#1">台海紧张局势下 台湾空军演习拦截中共军机</a></li>
-<li><a href="https://github.com/vlavdh3748/djy/blob/master/gb/22/1/9/n13491341.md#1">塞浦路斯发现结合Delta和Omicron变体新毒株</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/20/n13448716.md#1">美军潜艇母舰泊靠日本 推进防卫训练一体化</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/29/n13467152.md#1">美国防法案邀台参加环太军演 向中共释信号</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/5/n13484091.md#1">台海紧张局势下 台湾空军演习拦截中共军机</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616326.md#1">对俄罗斯制裁升温 企业响应</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md#1" target="_blank">印度媒体：成千上万人炼法轮功 深受裨益</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11255834.md#1" target="_blank">颜丹：日本作家村上春树新作引发的中国效应</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/4/n13481009.md#1">江雪：西安封城日记</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/3/n13477735.md#1">【未解之谜】地球失忆10亿年？！</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/21/12/30/n13470511.md#1">【百年真相】赵紫阳差点被打成“美国间谍”</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/3/n13479197.md#1">麦克阿瑟的韩战及台湾预言</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/2/n13476849.md#1">彩虹护守的土地 为什么世界不能失去台湾</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13489109.md#1">【财商天下】中企IPO衰落 还值得投资吗？</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13488862.md#1">【拍案惊奇】栗战书真出事了？北京2022将很难过</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/8/n13489501.md#1">【车评】月蚀之新貌 2022 Mitsubishi Eclipse Cross</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13488862.md#1">【拍案惊奇】栗战书真出事了？北京2022将很难过</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13488671.md#1">不让糖尿病前期变成糖尿病！有5个方法</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13488272.md#1">【中国观察】冬奥会 中共防火墙将开一条缝</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/6/n13487061.md#1">金曲歌手高向鹏昏迷近3个月 友人曝最新病况</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/6/n13487185.md#1">被港医建议接种高端疫苗 杜汶泽幽默揭示原因</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/6/n13486884.md#1">范冰冰曝光化妆小秘密 动作娴熟惊呆网友</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13489324.md#1">当红男星杨洋突然注销名下公司 引猜测</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13489144.md#1">马天宇忆丧母经历 自责儿时太想吃巧克力</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13488671.md#1">不让糖尿病前期变成糖尿病！有5个方法</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/3/n13477743.md#1">穿得越少越保暖！羽绒服这一穿法颠覆你的观念</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/5/n13482515.md#1">白肉鸡、乌骨鸡哪个更好？喝鸡汤补身1关键</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/6/n13486390.md#1">高硫食物是保持健康的关键要素</a></li>
-<li><a href="https://github.com/uuyaro331/djy/blob/master/gb/22/1/7/n13488125.md#1">香蕉可以帮助预防骨骼断裂和疼痛</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vlavdh3748/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vlavdh3748/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/8/n13491098.htm">六国在关岛展开“海龙”反潜军演 剑指中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/8/n13491098.htm">六国在关岛展开“海龙”反潜军演 剑指中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vlavdh3748/djy/blob/master/gb/22/1/8/n13491098.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vlavdh3748/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vlavdh3748/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vlavdh3748/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vlavdh3748/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vlavdh3748/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/22/1/8/n13491098.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
